-version-6-fix-bugs